Add configmap.yaml
